[package]
name = "chainblocks-core"
version = "0.1.0"
authors = ["Giovanni <sinkingsugar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
ctor = "0.1.2"

[build-dependencies]
bindgen = "0.51.1"