[package]
name = "chainblocks"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
ctor = "0.1.2"

[build-dependencies]
bindgen = "0.51.1"

[features]
# no features by default
default = []
dummy = []